Refactor build process and update APT repository setup
- Consolidated build scripts into a single `build.sh` for better maintainability.
- Removed outdated scripts: `build_deb_from_appimage.sh`, `build_latest_upstream_release.sh`, and `build_online_deb.sh`.
- Enhanced `build.sh` to handle both offline and online DEB package creation.
- Updated `update_apt_repo.sh` to generate a setup script for easier installation of Helium Browser via APT.
- Improved README documentation for installation methods and usage instructions.
- Added Ruby and FPM installation to the CI workflow for building packages.
- Introduced URL base handling for APT repository to facilitate easier access to the packages.

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -19,14 +19,15 @@ jobs:
       - name: Install deps
         run: |
           sudo apt-get update
-          sudo apt-get install -y jq dpkg-dev curl apt-utils
+          sudo apt-get install -y jq dpkg-dev curl apt-utils ruby ruby-dev build-essential
+          sudo gem install fpm
 
-      - name: Build latest upstream (or skip)
+      - name: Build packages
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           chmod +x scripts/*.sh
-          ./scripts/build_latest_upstream_release.sh --outdir dist --package helium-browser
+          ./scripts/build.sh
           cat dist/meta.env
 
       - name: Build APT repository
@@ -38,7 +39,19 @@ jobs:
           mkdir -p apt-repo
           source dist/meta.env
           deb_path="dist/${ONLINE_DEB_FILENAME}"
-          ./scripts/update_apt_repo.sh --repo-dir apt-repo --deb "$deb_path" --suite stable --component main
+          
+          # Construct Pages URL
+          REPO_OWNER="${{ github.repository_owner }}"
+          REPO_NAME="${{ github.event.repository.name }}"
+          # Handle case where owner/repo case might differ, but usually lowercase for pages
+          URL_BASE="https://${REPO_OWNER}.github.io/${REPO_NAME}"
+          
+          ./scripts/update_apt_repo.sh \
+            --repo-dir apt-repo \
+            --deb "$deb_path" \
+            --suite stable \
+            --component main \
+            --url-base "$URL_BASE"
 
       - name: Create GitHub Release
         if: ${{ hashFiles('dist/*.deb') != '' }}
