Update APT repository instructions in README and workflow to include 'trusted=yes' option, and enhance checksum calculation in generate-apt-repo.sh for better file handling.

--- a/.github/workflows/update-repos.yml
+++ b/.github/workflows/update-repos.yml
@@ -95,7 +95,7 @@ jobs:
             
             <h2>APT Repository (Debian/Ubuntu)</h2>
             <p>Add this repository to your system:</p>
-            <pre><code>echo "deb [arch=amd64,arm64] https://arvaidasre.github.io/helium-browser-deb/apt stable main" | sudo tee /etc/apt/sources.list.d/helium.list
+            <pre><code>echo "deb [arch=amd64,arm64 trusted=yes] https://arvaidasre.github.io/helium-browser-deb/apt stable main" | sudo tee /etc/apt/sources.list.d/helium.list
           sudo apt-get update
           sudo apt-get install helium-browser</code></pre>
             
