--- a/.github/workflows/update-repos.yml
+++ b/.github/workflows/update-repos.yml
@@ -78,47 +78,26 @@ jobs:
       - name: Create index page
         run: |
           mkdir -p repo
-          cat > repo/index.html << 'HTML_EOF'
+          # Copy the modern index.html template
+          if [ -f "scripts/index.html.template" ]; then
+            cp scripts/index.html.template repo/index.html
+            echo "Using modern index.html template"
+          else
+            echo "Template not found, creating basic index.html"
+            cat > repo/index.html << 'HTML_EOF'
           <!DOCTYPE html>
           <html>
           <head>
             <title>Helium Browser Repository</title>
             <meta charset="utf-8">
-            <style>
-              body { font-family: Arial, sans-serif; max-width: 800px; margin: 50px auto; padding: 20px; }
-              h1 { color: #333; }
-              h2 { color: #666; margin-top: 30px; }
-              code { background: #f4f4f4; padding: 2px 6px; border-radius: 3px; }
-              pre { background: #f4f4f4; padding: 15px; border-radius: 5px; overflow-x: auto; }
-            </style>
           </head>
           <body>
             <h1>Helium Browser Repository</h1>
-            <p>This repository provides APT and RPM packages for Helium Browser.</p>
-            
-            <h2>APT Repository (Debian/Ubuntu)</h2>
-            <p>Add this repository to your system:</p>
-            <pre><code>echo "deb [arch=amd64,arm64 trusted=yes] https://arvaidasre.github.io/helium-browser-deb/apt stable main" | sudo tee /etc/apt/sources.list.d/helium.list
-          sudo apt-get update
-          sudo apt-get install helium-browser</code></pre>
-            
-            <h2>RPM Repository (Fedora/RHEL/openSUSE)</h2>
-            <p>Create a repository file:</p>
-            <pre><code>sudo tee /etc/yum.repos.d/helium.repo &lt;&lt; 'REPOEOF'
-          [helium]
-          name=Helium Browser Repository
-          baseurl=https://arvaidasre.github.io/helium-browser-deb/rpm/$basearch
-          enabled=1
-          gpgcheck=0
-          REPOEOF
-          
-          sudo dnf install helium-browser</code></pre>
-            
-            <h2>Direct Downloads</h2>
-            <p>You can also download packages directly from the <a href="https://github.com/${{ github.repository }}/releases">GitHub Releases</a> page.</p>
+            <p>Loading...</p>
           </body>
           </html>
           HTML_EOF
+          fi
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
