Update index.html.template to change link color from primary variable to white for improved visibility and consistency in design.

--- a/scripts/index.html.template
+++ b/scripts/index.html.template
@@ -372,7 +372,7 @@
         }
 
         .meta-value a {
-            color: var(--primary);
+            color: #ffffff;            
             text-decoration: none;
             transition: color 0.3s ease;
         }
