--- a/.github/workflows/update-repos.yml
+++ b/.github/workflows/update-repos.yml
@@ -75,6 +75,19 @@ jobs:
           # Always generate repository structure
           ./scripts/generate-rpm-repo.sh repo/rpm
 
+      - name: Generate index page
+        run: |
+          mkdir -p repo
+          if [ -f "scripts/index.html.template" ]; then
+            cp scripts/index.html.template repo/index.html
+            echo "Using index.html template"
+          fi
+
+      - name: Validate repositories
+        run: |
+          chmod +x scripts/*.sh
+          ./scripts/validate-repos.sh repo/apt repo/rpm
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
