--- a/.github/workflows/build-prerelease.yml
+++ b/.github/workflows/build-prerelease.yml
@@ -34,7 +34,12 @@ jobs:
           JSON="$(curl -fsSL -H "Authorization: Bearer ${GITHUB_TOKEN}" "$API_URL")"
           
           # Find the latest pre-release
-          LATEST_PRERELEASE="$(echo "$JSON" | jq -r '[.[] | select(.prerelease == true)][0]')"
+          LATEST_PRERELEASE="$(echo "$JSON" | jq -r '[.[]
+            | select(.prerelease == true)
+            | select(((.assets // [])
+              | map(.name | test("linux.*\\.tar\\.(xz|gz|zst|bz2)$"; "i"))
+              | any))
+            ][0]')"
           
           if [[ "$LATEST_PRERELEASE" == "null" || -z "$LATEST_PRERELEASE" ]]; then
             echo "No pre-releases found. Exiting."
