--- a/.github/workflows/update-repos.yml
+++ b/.github/workflows/update-repos.yml
@@ -11,6 +11,12 @@ on:
     paths:
       - 'dist/*.deb'
       - 'dist/*.rpm'
+      - 'scripts/index.html.template'
+      - 'repo/install.sh'
+      - 'repo/install-rpm.sh'
+      - 'scripts/generate-apt-repo.sh'
+      - 'scripts/generate-rpm-repo.sh'
+      - 'scripts/validate-repos.sh'
   workflow_run:
     workflows: ["Build DEB and RPM from upstream Tarball"]
     types:
@@ -75,11 +81,17 @@ jobs:
           # Always generate repository structure
           ./scripts/generate-rpm-repo.sh repo/rpm
 
+      - name: Copy install scripts
+        run: |
+          cp repo/install.sh repo/apt/
+          cp repo/install-rpm.sh repo/rpm/
+
       - name: Generate index page
         run: |
           mkdir -p repo
+          rm -f repo/index.html
           if [ -f "scripts/index.html.template" ]; then
-            cp scripts/index.html.template repo/index.html
+            cp -f scripts/index.html.template repo/index.html
             echo "Using index.html template"
           fi
 
