Update GitHub workflows and scripts to improve pre-release checks and clean up old artifacts

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -2,9 +2,9 @@ name: Build DEB and RPM from upstream Tarball
 
 on:
   workflow_dispatch:
-  schedule:
-    # daily
-    - cron: '23 3 * * *'
+#  schedule:
+#    # daily
+#    - cron: '23 3 * * *'
 
 permissions:
   contents: write
